# MRS-Funding-Software

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  nginx.conf
src/: db.rs  macros.rs  main.rs  routes.rs  server.rs
src/controllers/: about.rs  campaigns.rs  contact.rs  dashboard.rs  fourofour.rs  home.rs  login.rs  logout.rs  mod.rs  page.rs
src/middleware/: csrf.rs
src/tests/: about_tests.rs  auth_tests.rs  csrf_tests.rs  fourofour_tests.rs  logout_tests.rs  mod.rs
src/views/: layout.rs  mod.rs
src/views/blocks/: footer.rs  head.rs  header.rs  mod.rs
src/views/themes/: default.css  minimal.css  mod.rs  monero.css  theme_manager.rs
